fixed z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -209,12 +209,12 @@ main {
 .modal {
     display: block;
     position: fixed;
-    z-index: 1;
     padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 99;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.9);
 }
@@ -224,7 +224,6 @@ main {
     margin: auto;
     display: block;
     width: 80%;
-    z-index: 99;
     max-width: 700px;
 }
 
